--- a/package.json
+++ b/package.json
@@ -4,7 +4,9 @@
   "description": "",
   "keywords": [],
   "main": "src/index.js",
+  "homepage": "https://costas-basdekis.github.io/editable-mnca/",
   "dependencies": {
+    "gh-pages": "3.2.3",
     "handlebars": "4.7.7",
     "handlebars-helpers": "0.10.0",
     "prop-types": "15.7.2",
@@ -23,6 +25,8 @@
   },
   "scripts": {
     "start": "react-scripts start",
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build",
     "build": "react-scripts build",
     "test": "react-scripts test --env=jsdom",
     "eject": "react-scripts eject"
