Create `package-lock.json` before setting up

--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -14,6 +14,8 @@ jobs:
     runs-on: ubuntu-latest
     steps:
     - uses: actions/checkout@v2
+    - name: Create package-lock.json
+      run: npm install --package-lock
     - name: Use Node.js ${{ matrix.node-version }}
       uses: actions/setup-node@v2
       with:
@@ -26,6 +28,8 @@ jobs:
     runs-on: ubuntu-latest
     steps:
     - uses: actions/checkout@v2
+    - name: Create package-lock.json
+      run: npm install --package-lock
     - name: Use Node.js ${{ matrix.node-version }}
       uses: actions/setup-node@v2
       with:
