--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -20,7 +20,7 @@ jobs:
         node-version: 16.x
         cache: 'npm'
     - run: npm ci
-    - run: npm run build
+    - run: CI= npm run build
     - run: npm test
   deploy:
     runs-on: ubuntu-latest
@@ -32,4 +32,5 @@ jobs:
         node-version: 16.x
         cache: 'npm'
     - run: npm ci
+    - run: CI= npm run build
     - run: npm run deploy
