--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -21,7 +21,7 @@ jobs:
         cache: 'npm'
     - run: npm ci
     - run: CI= npm run build
-    - run: npm test --passWithNoTests
+    - run: npm test
   deploy:
     runs-on: ubuntu-latest
     needs: [build]
