--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -21,6 +21,12 @@ jobs:
         cache: 'npm'
     - run: npm ci
     - run: CI= npm run build
+    - name: Archive build artifact
+      uses: actions/upload-artifact@v2
+      with:
+        name: build
+        path: build
+        retention-days: 1
     - run: npm test
   deploy:
     runs-on: ubuntu-latest
@@ -32,6 +38,9 @@ jobs:
       with:
         node-version: 16.x
         cache: 'npm'
-    - run: npm ci
-    - run: CI= npm run build
+    - name: Download build artifact
+      uses: actions/download-artifact@v2
+      with:
+        name: build
     - run: CI= npm run deploy
+
