Install dev-dependencies on actions

--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -19,7 +19,7 @@ jobs:
       with:
         node-version: 16.x
         cache: 'npm'
-    - run: npm ci
+    - run: npm ci --include=dev
     - run: CI= npm run build
     - name: Archive build artifact
       uses: actions/upload-artifact@v2
