--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -38,6 +38,7 @@ jobs:
       with:
         node-version: 16.x
         cache: 'npm'
+    - run: npm ci --include=dev
     - name: Download build artifact
       uses: actions/download-artifact@v2
       with:
